<resources>
    <string name="app_name">CatHub</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_project">AddProjectActivity</string>
    <string name="title_project">项目列表</string>
    <!--添加项目-->
    <string name="add_title_project">添加项目</string>
    <string name="other_device">外围设备</string>
    <string name="new_project_title">添加项目</string>
    <string name="new_project_name">新增项目名</string>
    <string name="new_project_tv_name">项目名:</string>
    <string name="new_project_cpp">C++</string>
    <string name="new_project_c">C</string>
    <string name="new_project_csharp">C#</string>
    <string name="new_project_java">Java</string>
    <string name="new_project_html">Html</string>
    <string name="new_project_js">JavaScript</string>
    <string name="new_project_css">CSS</string>
    <string name="new_project_unknow">Unknow</string>
    <string name="new_project_dir">项目路径:</string>
    <string name="new_project_describe">项目描述:</string>
    <string name="new_project_title_sure">确定</string>
    <string name="new_project_title_cancel">取消</string>
    <string name="new_project_tip_nameisnull">项目名不能为空!</string>
    <string name="new_project_tip_typeisnull">请选择项目类型!</string>
    <string name="new_project_tip_fileisnull">获取项目路径失败!</string>
    <string name="new_project_tip_addfail">项目添加失败!</string>
    <string name="new_project_tip_addsuccess">项目添加成功!</string>
    <string name="project_info_title">项目信息</string>
    <string name="check_Project">查看项目</string>
    <string name="check_source">查看源文件</string>
    <string name="check_code">代码文件</string>
</resources>
