<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <com.huwei.view.NavigationBarView
        android:id="@+id/nbv_new_project_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hasstatubar="true"
        app:navtitle="@string/new_project_title"
        app:leftbar_text="@string/new_project_title_cancel"
        app:rightbar_text="@string/new_project_title_sure"/>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_project_tv_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_new_project_name"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:hint="@string/new_project_name"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_project_tv_name"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.huwei.view.FlowRadioGroup
                    android:id="@+id/frg_new_project_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_new_project_type_cpp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_cpp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_new_project_type_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_c"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_new_project_type_csharp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_csharp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_new_project_type_java"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_java"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_new_project_type_html"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_html"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_new_project_type_js"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_js"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_new_project_type_css"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_css"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                    <RadioButton
                        android:id="@+id/rb_new_project_type_unknow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/radio_selector"
                        android:text="@string/new_project_unknow"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </com.huwei.view.FlowRadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_project_dir"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_new_project_path"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_project_describe"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_new_project_describ"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:maxLines="5"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>